--- a/homework/mvc/composer.json
+++ b/homework/mvc/composer.json
@@ -1,25 +1,25 @@
 {
-  "name": "mvc",
-  "description": "Mvc",
-  "type": "project",
-  "license": "GPL",
-  "authors": [
-    {
-      "name": "Osipenko Sergii",
-      "email": "stylenova@gamil.com"
+    "name": "mvc",
+    "description": "Mvc homework",
+    "type": "project",
+    "license": "GPL",
+    "authors": [
+        {
+            "name": "Sergii Osipenko",
+            "email": "stylenova@gmail.com"
+        }
+    ],
+    "autoload": {
+        "psr-4":
+        {
+            "App\\": "app/"
+        }
+    },
+    "require": {
+        "twig/twig": "^2.4",
+        "symfony/dotenv": "^4.1",
+        "illuminate/database": "^5.6",
+        "fzaninotto/faker": "^1.7",
+        "wixel/gump": "^1.5"
     }
-  ],
-  "autoload": {
-    "psr-4":
-    {
-      "App\\": "app/"
-    }
-  },
-  "require": {
-    "twig/twig": "^2.4",
-    "symfony/dotenv": "^4.1",
-    "illuminate/database": "^5.6",
-    "fzaninotto/faker": "^1.7",
-    "wixel/gump": "^1.5"
-  }
 }
